--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.5.14",
     "axios": "^1.7.7",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.3",
+    "@types/supertest": "^6.0.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
