--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^29.5.14",
     "axios": "^1.7.7",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5"
