--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "jest": "^29.7.0",
+    "kafkajs": "^2.2.4",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "@types/node": "^22.9.3",
+    "@types/node": "^22.9.4",
     "@types/supertest": "^6.0.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
