--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint . ",
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "jest --watchAll",
     "test:watch": "jest --watch",
@@ -28,11 +28,18 @@
     "ts-jest": "^29.2.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.4",
     "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.16.0"
   }
 }
