--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "@types/jest": "^29.5.14",
     "axios": "^1.7.7",
     "express": "^4.21.1",
